--- a/style.css
+++ b/style.css
@@ -64,3 +64,21 @@ article.spider figure img {
   width: 200px;
   margin-right: 210px;
 } 
+
+footer {
+  text-align:center;
+  padding: 2rem;
+  background:#333;
+  color: #666;
+}
+
+footer a {
+  color: #fff;
+  text-decoration:none;
+  font-family:sans-serif;
+}
+ 
+
+footer a:hover {
+  color:yellow;
+}
